2002-01-22  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (initgobject): don't create boxed_marshal hash
	table, and remove the type functions moved to pygtype.c.

	* pygtype.c: move GType stuff here from gobjectmodule.c.
	(pyg_register_boxed_custom): store the custom boxed marshal
	functions as GType data, rather than in a separate hash table.

2002-01-21  James Henstridge  <james@daa.com.au>

	* Makefile.am (gobjectmodule_la_SOURCES): list extra source files.

	* pygobject-private.h (pyg_boxed_new): new header for functions
	shared between files in gobjectmodule.

	* pygboxed.c (pyg_register_boxed): move GBoxed handling code here.

2002-01-21  Matt Wilson  <msw@redhat.com>

	* gtk/gtk.override (_wrap_gtk_radio_button_get_group): implemented
	GtkRadioButton.get_group

2002-01-16  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (_wrap_gtk_toolbar_append_element): remove '!'
	signs that shouldn't have been there.
	(_wrap_gtk_toolbar_prepend_element): same here.
	(_wrap_gtk_toolbar_insert_element): and again.

2002-01-14  James Henstridge  <james@daa.com.au>

	* codegen/codegen.py (main): add a --load-types argument that runs
	a python script before commencing code generation.  The idea is to
	allow loading of extra argument type handlers.

	* gtk/libglade.override (connect_one): s/ignore_glob/ignore-glob/

2002-1-13  Johan Dahlin  <jdahlin@telia.com>

	* gtk/Makefile.am: Register gtk-types here, so XML.get_widget works.

2002-01-12  James Henstridge  <james@daa.com.au>

	* gobjectmodule.c (pyg_type_from_object): convert None, int, long,
	float, str and object to GTypes.

	* gtk/gtkmodule.c (init_gtk): only raise a runtime error if we
	can't initialise gtk.

2002-01-11  Matt Wilson  <msw@redhat.com>

	* Makefile.am (EXTRA_DIST): added appwindow.py

	* examples/pygtk-demo/demos/appwindow.py: added demo

	* gtk/gtk.override (_wrap_gtk_toolbar_insert_stock): removed
	debugging code I didn't mean to check in.
