@@ -34,6 +34,10 @@ void      pyg_register_boxed_custom(GType boxed_type,
 int       pyg_value_from_pyobject(GValue *value, PyObject *obj);
 PyObject *pyg_value_as_pyobject(const GValue *value);
 
+GClosure *pyg_closure_new(PyObject *callback, PyObject *extra_args, PyObject *swap_data);
+GClosure *pyg_signal_class_closure_get(void);
+
+
 /* from pygboxed.c */
 extern PyTypeObject PyGBoxed_Type;
 
