@@ -1,5 +1,7 @@
 2002-01-22  James Henstridge  <james@daa.com.au>
 
+	* pygtype.c: move closure stuff here.
+
 	* gobjectmodule.c (initgobject): don't create boxed_marshal hash
 	table, and remove the type functions moved to pygtype.c.
 
